# mcp-server

./: .dockerignore  .dxtignore  .gitignore  CLAUDE.md  Dockerfile  README.md  bootstrap.sh  docker-compose.yml  install.sh  manifest.json  mcp-server.dxt  pyproject.toml
.github/workflows/: build-and-publish.yml
lib/: common.sh  copilots.sh  deps.sh  project.sh
mcp_server/: __init__.py  __main__.py  config.py  logging.yaml  server.py  skill_parameter.py  tool_registry.py  utils.py
mcp_server/auth/: dynamic_auth_middleware.py  fastmcp_extended.py  token_verifier.py
mcp_server/modes/: local.py  remote.py
mcp_server/src/: __init__.py
mcp_server/utils/: __init__.py  client.py  context.py  copilot.py  environment.py  skill.py  tool.py  validation.py
scripts/: copilot_selector_wrapper.sh  get_copilots.py  select_copilots_interactive.py  validate_connection.py
server/: main.py
tests/integration/: remote_oauth_harness.py  test_local_stdio.py
tests/unit/: test_skill_parameter.py  test_startup.py  test_token_verifier.py  test_tool_factory.py  test_tool_registry_concurrency.py
