[project]
name = "maxai-mcp"
description = "MCP server that connects to Max AI agents"
readme = "README.md"
requires-python = ">=3.10.7"
dynamic = ["version"]
dependencies = [
    "answerrocket-client @ git+https://github.com/answerrocket/answerrocket-python-client.git@6d3ee1233dc9e5d824cf98a76b027e0220a597b1",
    "mcp>=1.10.1",
    "starlette-context>=0.4.0"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["lib*", "scripts*"]

[tool.setuptools.dynamic]
version = { attr = "mcp_server.__version__" }

[project.scripts]
maxai-mcp = "mcp_server.__main__:main"
