[project]
name = "maxai-mcp"
description = "MCP server that connects to Max AI agents"
readme = "README.md"
requires-python = ">=3.10.7"
dynamic = ["version"]
dependencies = [
    "answerrocket-client==0.2.105",
    "mcp>=1.27.2,<2",
    "starlette>=1.2.1,<2",
    "starlette-context>=0.5.1",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.24.0",
    "anyio>=4.0.0",
]

[build-system]
requires = ["pip>=25.3", "setuptools>=78.1.1"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
exclude = ["lib*", "scripts*"]

[tool.setuptools.dynamic]
version = { attr = "mcp_server.__version__" }

[project.scripts]
maxai-mcp = "mcp_server.__main__:main"
